<resources>
    <string name="app_name">My Application</string>
    <string name="ping">ping</string>
    <string name="admin">admin.****</string>
    <string name="pass">Пароль</string>
    <string name="checkbox">CheckBox</string>
    <string name="enter">Войти</string>
    <string name="admin_">admin.</string>
    <string name="savepass">Сохранить пароль</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
